<resources>
    <string name="app_name">MyAndroidProject</string>
    <string name="title_activity_drawer">MyApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_product">Products</string>
    <string name="menu_basket">Basket</string>
    <string name="menu_add_product">Add product</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Введите имя товара</string>
    <string name="product_type">Введите тип товара</string>
    <string name="product_price">Введите цену</string>
    <string name="send">Send</string>
</resources>
