<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_basket"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_basket" />
        <item
            android:id="@+id/nav_add_product"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_add_product" />
    </group>

</menu>
