<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.myandroidproject.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.myandroidproject.ui.product.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_basket"
        android:name="com.example.myandroidproject.ui.basket.BasketFragment"
        android:label="@string/menu_basket"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/nav_add_product"
        android:name="com.example.myandroidproject.ui.add_product.AddProductFragment"
        android:label="@string/menu_add_product"
        tools:layout="@layout/fragment_add_product" />
</navigation>