<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editText_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/product_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_product_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/product_type"
        app:layout_constraintEnd_toEndOf="@+id/editText_product_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_product_name"
        app:layout_constraintTop_toBottomOf="@+id/editText_product_name" />

    <EditText
        android:id="@+id/editText_product_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/product_price"
        app:layout_constraintEnd_toEndOf="@+id/editText_product_type"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editText_product_type"
        app:layout_constraintTop_toBottomOf="@+id/editText_product_type" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:text="@string/send"
        app:layout_constraintBottom_toTopOf="@+id/editText_product_cost"
        app:layout_constraintEnd_toEndOf="@+id/editText_product_cost"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/editText_product_cost" />
</androidx.constraintlayout.widget.ConstraintLayout>